--- a/app/translations/it/core.json
+++ b/app/translations/it/core.json
@@ -1,11 +1,17 @@
 {
     "cancel": "Annulla",
     "add": "Aggiugi",
+    "addit": "Aggiungi e Modifica ",
     "save": "Salva",
     "saved": "Salvato!",
+    "change": "Cambia",
     "delete": "Elimina",
     "insert": "Inserisci",
     "ok": "Ok",
+    "routes.error.invalid": "URL del Panel non valido",
+    "controller.error.invalid": "Controller non valido",
+    "controller.error.action": "Azione non valida",
+    "view.error.invalid": "Vista non valida",
     "options.show": "Mostra opzioni",
     "options.hide": "Nascondi opzioni",
     "installation": "Installazione",
@@ -13,11 +19,11 @@
     "installation.check.text": "Kirby ha riscontrato i seguenti problemi durante l'installazione…",
     "installation.check.retry": "Riprova",
     "installation.check.error": "Sono stati riscontrati dei problemi!",
-    "installation.check.error.accounts": "\/site\/accounts non dispone dei permessi di scrittura",
-    "installation.check.error.avatars": "\/assets\/avatars non dispone dei permessi di scrittura",
-    "installation.check.error.blueprints": "Aggiungi la cartella \/site\/blueprints",
-    "installation.check.error.content": "La cartella \/content e tutti i file e le cartelle in essa contenuti devono disporre dei permessi di scrittura.",
-    "installation.check.error.thumbs": "La cartella \/thumbs deve disporre dei permessi di scrittura.",
+    "installation.check.error.accounts": "/site/accounts non dispone dei permessi di scrittura",
+    "installation.check.error.avatars": "/assets/avatars non dispone dei permessi di scrittura",
+    "installation.check.error.blueprints": "Aggiungi la cartella /site/blueprints",
+    "installation.check.error.content": "La cartella /content e tutti i file e le cartelle in essa contenuti devono disporre dei permessi di scrittura.",
+    "installation.check.error.thumbs": "La cartella /thumbs deve disporre dei permessi di scrittura.",
     "installation.signup.username.label": "Crea il tuo primo profilo",
     "installation.signup.username.placeholder": "Nome utente",
     "installation.signup.email.label": "Email",
@@ -31,7 +37,9 @@
     "login.password.label": "Password",
     "login.error": "Username o password non validi",
     "login.button": "Accedi",
+    "login.log.error.permissions": "Il file di log degli accessi non è scrivibile.",
     "logout": "Logout",
+    "topbar.error.class.definition": "Manca la definizione topbar per la classe:",
     "dashboard": "Dashboard",
     "dashboard.index.pages.title": "Pagine",
     "dashboard.index.pages.edit": "Modifica",
@@ -43,11 +51,23 @@
     "dashboard.index.metatags.edit": "Modifica",
     "dashboard.index.history.title": "Le tue ultime modifiche",
     "dashboard.index.history.text": "Le ultime pagine modificate verranno mostrate qui per permetterti di ritrovarle più facilmente.",
+    "dashboard.index.license.title": "Licenza di Kirby",
     "metatags": "Informazioni sul sito",
+    "metatags.info": "Kirby info",
+    "metatags.license": "Licenza di Kirby",
+    "metatags.version.toolkit": "Versione del Toolkit",
+    "metatags.version.kirby": "Versione di Kirby",
+    "metatags.version.panel": "Versione del Panel",
     "metatags.back": "Torna alla dashboard",
+    "metatags.files": "File del sito",
+    "site.delete.error": "Il sito non può essere rimosso",
     "pages.show.settings": "Impostazioni della pagina",
     "pages.show.preview": "Anteprima",
     "pages.show.changeurl": "Modifica URL",
+    "pages.show.invisible": "Status: invisibile",
+    "pages.show.visible": "Status: visibile",
+    "pages.show.changes.text": "Ci sono modifiche non salvate!",
+    "pages.show.changes.button": "Abbandona",
     "pages.show.delete": "Elimina questa pagina",
     "pages.show.subpages.title": "Pagine",
     "pages.show.subpages.edit": "Modifica",
@@ -58,7 +78,7 @@
     "pages.show.files.add": "Aggiungi",
     "pages.show.files.empty": "Questa pagina non ha file",
     "pages.show.error.permissions.title": "Questa pagina non dispone dei permessi di scrittura",
-    "pages.show.error.permissions.text": "Verifica i permessi della cartella \/content e di tutto il suo contenuto.",
+    "pages.show.error.permissions.text": "Verifica i permessi della cartella /content e di tutto il suo contenuto.",
     "pages.show.error.permissions.retry": "Riprova",
     "pages.show.error.notitle.title": "Nel modello non è previsto un campo per il titolo",
     "pages.show.error.notitle.text": "Aggiungi un campo titolo e riprova",
@@ -71,6 +91,7 @@
     "pages.add.url.close": "Chiudi",
     "pages.add.url.help": "Formato: minuscole a-z, 0-9 e trattini",
     "pages.add.template.label": "Template",
+    "pages.add.error.create": "La pagina non può essere creata",
     "pages.add.error.title": "Il titolo è vuoto",
     "pages.add.error.template": "Il template non è stato trovato",
     "pages.add.error.max.headline": "Non è consentita l'aggiunta di nuove pagine",
@@ -79,6 +100,13 @@
     "pages.url.uid.label.option": "Crea in base al titolo",
     "pages.url.error.exists": "Esiste già una pagina con lo stesso URL",
     "pages.url.error.move": "L'URL non può essere modificato",
+    "pages.url.error.rights": "Non puoi cambiare l'URL di questa pagina",
+    "pages.url.home.error.error": "Gli URL per la home e le pagine di errore non possono essere cambiati",
+    "pages.toggle.position": "Posizione",
+    "pages.toggle.invisible": "invisibile",
+    "pages.toggle.publish": "Vuoi veramente cambiare lo status della pagina a **visibile?**",
+    "pages.toggle.hide": "Vuoi veramente cambiare lo status della pagina a **invisibile?**",
+    "pages.toggle.error.error": "Lo status della pagina d'errore non può essere cambiato",
     "pages.delete.headline": "Sei sicuro di voler eliminare questa pagina?",
     "pages.delete.error.home.headline": "La pagina home non può essere eliminata",
     "pages.delete.error.home.text": "Stai cercando di eliminare la pagina home. Quest'operazione non è possibile e potrebbe causare effetti indesiderati.",
@@ -98,9 +126,11 @@
     "subpages.index.add.first.text": "Questa pagina non ha ancora sottopagine",
     "subpages.index.add.first.button": "Aggiungi la prima pagina",
     "subpages.index.visible": "Pagine visibili",
-    "subpages.index.visible.help": "Trascina qui una pagina nascosta per riordinarla\/renderla visibile.",
+    "subpages.index.visible.help": "Trascina qui una pagina nascosta per riordinarla/renderla visibile.",
     "subpages.index.invisible": "Pagine nascoste",
     "subpages.index.invisible.help": "Trascina qui una pagina visibile per nasconderla.",
+    "subpages.add.error": "A questa pagina non è consentito avere altre sottopagine",
+    "subpages.add.error.more": "Questa pagina non può avere altre sottopagine",
     "subpages.error.missing": "La pagina non è stata trovata",
     "files": "Files",
     "files.index.headline": "Files associati a",
@@ -110,10 +140,19 @@
     "files.index.upload.first.button": "Carica il primo file",
     "files.index.edit": "Modifica",
     "files.index.delete": "Elimina",
+    "files.index.error.disabled": "Alla pagina non è consentito avere nessun file",
+    "files.add.error.max": "Il numero massimo di file per l'utente corrente è stato raggiunto.",
+    "files.add.error.extension.missing": "Non puoi caricare file senza estensione",
+    "files.add.error.extension.forbidden": "Estensione non consentita",
+    "files.add.error.mime.forbidden": "Mime type non consentito",
+    "files.add.error.htaccess": "Il file htaccess non può essere caricato",
+    "files.add.error.invisible": "I file invisibili non possono essere caricati",
+    "files.add.blueprint.type.error": "La pagina consente solo:",
+    "files.add.blueprint.size.error": "La pagina permette una dimensione del file di",
     "files.show.name.label": "Nome del file",
-    "files.show.info.label": "Tipo \/ Dimensione \/ Misure",
+    "files.show.info.label": "Tipo / Dimensione / Misure",
     "files.show.link.label": "Link pubblico",
-    "files.show.open": "Mostra\/scarica file",
+    "files.show.open": "Mostra/scarica file",
     "files.show.back": "Indietro",
     "files.show.replace": "Sostituisci",
     "files.show.delete": "Elimina",
@@ -157,19 +196,29 @@
     "users.form.back": "Torna agli utenti",
     "users.form.error.password.confirm": "Conferma la password",
     "users.form.error.update": "Il profilo dell'utente non può essere aggiornato",
+    "users.form.error.update.rights": "Non ti è permesso aggiornare questo utente",
     "users.form.error.create": "Il profilo dell'utente non può essere creato",
     "users.form.error.permissions.title": "La cartella degli account non dispone dei permessi di scrittura.",
-    "users.form.error.permissions.text": "Verifica che la cartella \/site\/accounts esista e disponga dei permessi di scrittura.",
+    "users.form.error.permissions.text": "Verifica che la cartella /site/accounts esista e disponga dei permessi di scrittura.",
     "users.delete.headline": "Sei sicuro di voler eliminare questo utente?",
     "users.delete.error": "L'utente non può essere eliminato",
+    "users.delete.error.permission": "Non ti è permesso eliminare gli utenti",
+    "users.delete.error.permission.single": "Non ti è permesso eliminare questo utente ",
+    "users.delete.error.lastadmin": "Non puoi eliminare l'ultimo amministratore",
     "users.avatar.drop": "Trascina qui un'immagine per il profilo…",
     "users.avatar.click": "…o clicca per caricarne una",
     "users.avatar.error.type": "Puoi solo caricare files in formato JPG, PNG o GIF.",
     "users.avatar.error.folder.headline": "La cartella delle immagini di profilo non ha i permessi di scrittura",
-    "users.avatar.error.folder.text": "Crea la cartella <strong>\/assets\/avatars<\/strong> e assegnale i permessi di scrittura per caricare le immagini dei profili.",
+    "users.avatar.error.folder.text": "Crea la cartella <strong>/assets/avatars</strong> e assegnale i permessi di scrittura per caricare le immagini dei profili.",
+    "users.avatar.error.permission": "Non ti è permesso di cambiare l'avatar",
     "users.avatar.delete.error": "L'immagine del profilo non è potuta essere eliminata.",
+    "users.avatar.delete.error.permission": "Non ti è permesso di eliminare l'avatar di questo utente",
     "users.avatar.delete.success": "L'immagine del profilo è stata eliminata",
+    "users.avatar.missing": "Questo utente non ha un avatar",
     "users.error.missing": "L'utente non è stato trovato",
+    "user.error.lastadmin": "Tu sei l'unico amministratore. Questa voce non può essere cambiata.",
+    "form.error.missing": "Il form non esiste",
+    "form.construct.error.invalid": "Il metodo construction del form è invalido ",
     "fields.required": "Campo obbligatorio",
     "fields.date.label": "Data",
     "fields.date.months": [
@@ -209,15 +258,17 @@
     "fields.number.label": "Numero",
     "fields.number.placeholder": "#",
     "fields.page.label": "Pagina",
-    "fields.page.placeholder": "percorso\/alla\/pagina",
+    "fields.page.placeholder": "percorso/alla/pagina",
     "fields.password.label": "Password",
     "fields.structure.add": "Aggiungi",
     "fields.structure.add.first": "Aggiungi il primo elemento",
     "fields.structure.empty": "Non ci sono ancora elementi.",
+    "fields.structure.entry.error": "L'elemento non esiste",
     "fields.structure.cancel": "Annulla",
     "fields.structure.save": "Salva",
     "fields.structure.edit": "Modifica",
     "fields.structure.delete": "Elimina",
+    "fields.structure.delete.label": "Vuoi veramente eliminare questo elemento?",
     "fields.tags.label": "Tag",
     "fields.tel.label": "Telefono",
     "fields.textarea.buttons.bold.label": "Testo in grassetto",
@@ -232,6 +283,10 @@
     "fields.toggle.no": "No",
     "fields.toggle.on": "On",
     "fields.toggle.off": "Off",
+    "fields.error.missing.controller": "Manca il file controller del campo",
+    "fields.error.missing.class": "Manca la classe controller del campo",
+    "fields.error.route.invalid": "Route del campo invalida",
+    "fields.error.extended": "Il campo non può essere esteso",
     "editor.link.url.label": "Link",
     "editor.link.text.label": "Testo del link",
     "editor.link.text.help": "Il testo del link è opzionale",
@@ -241,6 +296,8 @@
     "editor.email.text.help": "Il testo del link è opzionale",
     "editor.file.empty": "In questa pagina non ci sono files",
     "editor.image.empty": "In questa pagina non ci sono immagini",
+    "autocomplete.method.error": "Metodo di autocompletamento invalido",
+    "blueprints.error.default.missing": "Manca il blueprint di default",
     "error": "Errore",
     "error.headline": "Errore"
 }
