--- a/app/translations/pt_PT/core.json
+++ b/app/translations/pt_PT/core.json
@@ -100,13 +100,13 @@
     "pages.url.uid.label.option": "Criar a partir do título",
     "pages.url.error.exists": "Já existe uma página com mesmo apêndice",
     "pages.url.error.move": "O apêndice não pôde ser alterado",
-    "pages.url.error.rights": "You cannot change the URL of this page",
-    "pages.url.home.error.error": "The URL for the home and error pages cannot be changed",
-    "pages.toggle.position": "Position",
-    "pages.toggle.invisible": "invisible",
-    "pages.toggle.publish": "Do you really want to change the status of this page to **visible?**",
-    "pages.toggle.hide": "Do you really want to change the status of this page to **invisible?**",
-    "pages.toggle.error.error": "The status of the error page cannot be changed",
+    "pages.url.error.rights": "Não é possível mudar o URL desta página",
+    "pages.url.home.error.error": "O URL para as paginas home e erro não pode ser modificado",
+    "pages.toggle.position": "Posição",
+    "pages.toggle.invisible": "Invisível",
+    "pages.toggle.publish": "Queres mesmo alterar o estatuto desta página para **visível**?",
+    "pages.toggle.hide": "Queres mesmo alterar o estatuto desta página para **invisível**?",
+    "pages.toggle.error.error": "O estatuto da pagina erro não pode ser alterado",
     "pages.delete.headline": "Queres mesmo apagar esta página?",
     "pages.delete.error.home.headline": "A página \"home\" não pode ser apagada",
     "pages.delete.error.home.text": "Estás a tentar apagar a página \"home\". O que não é possível e poderia causar efeitos indesejados.",
@@ -129,8 +129,8 @@
     "subpages.index.visible.help": "Arrasta as páginas invisíveis aqui para ordenar/torna-las visíveis.",
     "subpages.index.invisible": "Páginas invisíveis",
     "subpages.index.invisible.help": "Arrasta as páginas visíveis aqui para desordenar/torna-las invisíveis",
-    "subpages.add.error": "This page is not allowed to have subpages",
-    "subpages.add.error.more": "This page cannot have any more subpages",
+    "subpages.add.error": "Página sem permissão de ter paginas inferiores",
+    "subpages.add.error.more": "Esta página não pode ter mais paginas inferiores",
     "subpages.error.missing": "Página não encontrada",
     "files": "Ficheiros",
     "files.index.headline": "Ficheiros para",
@@ -140,15 +140,15 @@
     "files.index.upload.first.button": "Faz upload do primeiro ficheiro",
     "files.index.edit": "Editar",
     "files.index.delete": "Apagar",
-    "files.index.error.disabled": "The page is not allowed to have any files",
-    "files.add.error.max": "The maximum number of files for the current page has been reached.",
-    "files.add.error.extension.missing": "You cannot upload files without extension",
-    "files.add.error.extension.forbidden": "Forbidden file extension",
-    "files.add.error.mime.forbidden": "Forbidden mime type",
-    "files.add.error.htaccess": "htaccess files cannot be uploaded",
-    "files.add.error.invisible": "Invisible files cannot be uploaded",
-    "files.add.blueprint.type.error": "Page only allows:",
-    "files.add.blueprint.size.error": "Page only allows file size of",
+    "files.index.error.disabled": "Página sem permissão de ter ficheiros",
+    "files.add.error.max": "O máximo de ficheiros foi atingido para esta página.",
+    "files.add.error.extension.missing": "Não podes fazer upload sem extensão",
+    "files.add.error.extension.forbidden": "Extensão proibida",
+    "files.add.error.mime.forbidden": "Tipo mime proibido",
+    "files.add.error.htaccess": "Não se pode fazer upload de ficheiros htaccess",
+    "files.add.error.invisible": "Não se pode fazer upload de ficheiros invisíveis",
+    "files.add.blueprint.type.error": "Pagina apenas permite:",
+    "files.add.blueprint.size.error": "A pagina apenas permite tamanho de",
     "files.show.name.label": "Nome do ficheiro",
     "files.show.info.label": "Tipo / Tamanho / Dimensões",
     "files.show.link.label": "Link público",
@@ -196,29 +196,29 @@
     "users.form.back": "Voltar para utilizadores",
     "users.form.error.password.confirm": "Por favor confirmar a Palavra-passe",
     "users.form.error.update": "O utilizador não pode ser atualizado",
-    "users.form.error.update.rights": "You are not allowed to update this user",
+    "users.form.error.update.rights": "Sem autorização para fazeres update a este utilizador",
     "users.form.error.create": "O utilizador não pode ser criado",
     "users.form.error.permissions.title": "O folder \"account\" não tem permissão de escrita",
     "users.form.error.permissions.text": "Por favor certifica-te que /site/accounts existe e possui permissão de escrita.",
     "users.delete.headline": "Queres mesmo apagar este utilizador?",
     "users.delete.error": "Este utilizador nao pode ser apagado",
-    "users.delete.error.permission": "You are not allowed to delete users",
-    "users.delete.error.permission.single": "You are not allowed to delete this user",
-    "users.delete.error.lastadmin": "You cannot delete the last admin",
+    "users.delete.error.permission": "Não tens autorização para apagar utilizadores",
+    "users.delete.error.permission.single": "Não tens autorização para apagar este utilizador",
+    "users.delete.error.lastadmin": "Não é possivel apagar o ultimo admin",
     "users.avatar.drop": "Arrasta a foto do perfil aqui…",
     "users.avatar.click": "…ou clica para fazer upload",
     "users.avatar.error.type": "Apenas podes fazer upload de ficheiros JPG, PNG and GIF",
     "users.avatar.error.folder.headline": "O folder \"avatar\" não tem permissão de escrita",
     "users.avatar.error.folder.text": "Por favor cria o folder <strong>/assets/avatars</strong> e garante que tem permissão de escrita para poder fazer upload de fotos de perfil.",
-    "users.avatar.error.permission": "You are not allowed to change the avatar",
+    "users.avatar.error.permission": "Não tens autorização para mudar o avatar",
     "users.avatar.delete.error": "A foto do perfil não pode ser apagada",
-    "users.avatar.delete.error.permission": "You are not allowed to delete the avatar of this user",
+    "users.avatar.delete.error.permission": "Não tens autorização para apagar o avatar deste utilizador",
     "users.avatar.delete.success": "A foto do perfil foi apagada",
-    "users.avatar.missing": "This user has no avatar",
+    "users.avatar.missing": "Este utilizador não tem avatar",
     "users.error.missing": "Utilizador não encontrado",
-    "user.error.lastadmin": "You are the only admin. This cannot be changed.",
-    "form.error.missing": "The form cannot be found",
-    "form.construct.error.invalid": "Invalid form construction method",
+    "user.error.lastadmin": "Só es admin. Isto não pode ser mudado.",
+    "form.error.missing": "Não foi possível encontrar o formulário",
+    "form.construct.error.invalid": "Método inválido de construção do formulário",
     "fields.required": "Obrigatório",
     "fields.date.label": "Data",
     "fields.date.months": [
@@ -263,12 +263,12 @@
     "fields.structure.add": "Adicionar",
     "fields.structure.add.first": "Adicionar primeira entrada",
     "fields.structure.empty": "Sem entradas ainda.",
-    "fields.structure.entry.error": "The item could not be found",
+    "fields.structure.entry.error": "O item não foi encontrado",
     "fields.structure.cancel": "Cancelar",
     "fields.structure.save": "Gravar",
     "fields.structure.edit": "Editar",
     "fields.structure.delete": "Apagar",
-    "fields.structure.delete.label": "Do you really want to delete this entry?",
+    "fields.structure.delete.label": "Queres mesmo apagar esta entrada?",
     "fields.tags.label": "Tags",
     "fields.tel.label": "Fone",
     "fields.textarea.buttons.bold.label": "Texto negrito",
@@ -283,10 +283,10 @@
     "fields.toggle.no": "Não",
     "fields.toggle.on": "Ligado",
     "fields.toggle.off": "Desligado",
-    "fields.error.missing.controller": "The field controller file is missing",
-    "fields.error.missing.class": "The field controller class is missing",
-    "fields.error.route.invalid": "Invalid field route",
-    "fields.error.extended": "The field cannot be extended",
+    "fields.error.missing.controller": "Falta o ficheiro do controlador de campo ",
+    "fields.error.missing.class": "Falta a classe do controlador de campo",
+    "fields.error.route.invalid": "Rota de campo inválida",
+    "fields.error.extended": "Não é possível extender o campo",
     "editor.link.url.label": "Inserir URL",
     "editor.link.text.label": "Texto do link",
     "editor.link.text.help": "O texto do link é opcional",
@@ -296,8 +296,8 @@
     "editor.email.text.help": "O texto do link é opcional",
     "editor.file.empty": "Esta página não tem ficheiros",
     "editor.image.empty": "Esta página não tem imagens",
-    "autocomplete.method.error": "Invalid autocomplete method",
-    "blueprints.error.default.missing": "Missing default blueprint",
+    "autocomplete.method.error": "Método inválido de auto-contemplação",
+    "blueprints.error.default.missing": "Falta do blueprint padrão",
     "error": "Erro",
     "error.headline": "Erro"
 }
