--- a/app/translations/ru/core.json
+++ b/app/translations/ru/core.json
@@ -35,7 +35,7 @@
     "login.welcome": "Пожалуйста, войдите под своими учетными данными",
     "login.username.label": "Логин",
     "login.password.label": "Пароль",
-    "login.error": "Неправильная пара логин-пароль",
+    "login.error": "Неверный логин или пароль",
     "login.button": "Вход",
     "login.log.error.permissions": "Login log file is not writable.",
     "logout": "Выход",
@@ -64,8 +64,8 @@
     "pages.show.settings": "Настройки страницы",
     "pages.show.preview": "Предпросмотр",
     "pages.show.changeurl": "Изменить ссылку (ЧПУ)",
-    "pages.show.invisible": "Status: invisible",
-    "pages.show.visible": "Status: visible",
+    "pages.show.invisible": "Статус: не отображается",
+    "pages.show.visible": "Статус: отображается",
     "pages.show.changes.text": "You have unsaved changes!",
     "pages.show.changes.button": "Discard",
     "pages.show.delete": "Удалить эту страницу",
