--- a/app/translations/hu/core.json
+++ b/app/translations/hu/core.json
@@ -1,17 +1,17 @@
 {
     "cancel": "Mégsem",
     "add": "Hozzáad",
-    "addit": "Add & Edit",
+    "addit": "Hozzáad és szerkeszt",
     "save": "Mentés",
     "saved": "Mentve!",
-    "change": "Change",
+    "change": "Módosítás",
     "delete": "Törlés",
     "insert": "Beilleszt",
     "ok": "Ok",
-    "routes.error.invalid": "Invalid Panel URL",
-    "controller.error.invalid": "Invalid controller",
-    "controller.error.action": "Invalid action",
-    "view.error.invalid": "Invalid view:",
+    "routes.error.invalid": "Érvénytelen Panel URL",
+    "controller.error.invalid": "Érvénytelen vezérlő",
+    "controller.error.action": "Érvénytelen művelet",
+    "view.error.invalid": "Érvénytelen nézet:",
     "options.show": "Beállítások mutatása",
     "options.hide": "Beállítások elrejtése",
     "installation": "Telepítés",
@@ -37,12 +37,12 @@
     "login.password.label": "Jelszó",
     "login.error": "Érvénytelen felhasználónév vagy jelszó",
     "login.button": "Belépés",
-    "login.log.error.permissions": "Login log file is not writable.",
+    "login.log.error.permissions": "A bejelentkezési logfájl nem írható",
     "logout": "Kijelentkezés",
-    "topbar.error.class.definition": "Missing topbar definition for class:",
+    "topbar.error.class.definition": "Ez az osztály nincs definiálva: ",
     "dashboard": "Vezérlőközpont",
     "dashboard.index.pages.title": "Oldalak",
-    "dashboard.index.pages.edit": "Edit",
+    "dashboard.index.pages.edit": "Oldal szerkesztése",
     "dashboard.index.pages.add": "Új oldal",
     "dashboard.index.site.title": "Honlapod URL-je",
     "dashboard.index.account.title": "Fiókod",
@@ -51,37 +51,37 @@
     "dashboard.index.metatags.edit": "Szerkesztés",
     "dashboard.index.history.title": "Legutóbbi frissítések",
     "dashboard.index.history.text": "Az általad legutóbb módosított oldalakat találod itt, hogy könnyebben megtaláld újból.",
-    "dashboard.index.license.title": "Kirby license",
+    "dashboard.index.license.title": "Kirby licenc",
     "metatags": "Metatagok",
-    "metatags.info": "Kirby info",
-    "metatags.license": "Kirby license",
-    "metatags.version.toolkit": "Toolkit version",
-    "metatags.version.kirby": "Kirby version",
-    "metatags.version.panel": "Panel version",
+    "metatags.info": "Kirby infó",
+    "metatags.license": "Kirby licenc",
+    "metatags.version.toolkit": "Toolkit verzió",
+    "metatags.version.kirby": "Kirby verzió",
+    "metatags.version.panel": "Panel verzió",
     "metatags.back": "Vissza a vezerlőközpontba",
-    "metatags.files": "Site files",
-    "site.delete.error": "The site cannot be deleted",
+    "metatags.files": "A weboldalhoz tartozó fájlok",
+    "site.delete.error": "A weboldal nem törölhető",
     "pages.show.settings": "Oldal beállítások",
     "pages.show.preview": "Előnézet megnyitása",
     "pages.show.changeurl": "URL változtatása",
-    "pages.show.invisible": "Status: invisible",
-    "pages.show.visible": "Status: visible",
-    "pages.show.changes.text": "You have unsaved changes!",
-    "pages.show.changes.button": "Discard",
+    "pages.show.invisible": "Állapot: rejtett",
+    "pages.show.visible": "Állapot: látható",
+    "pages.show.changes.text": "Nem mentett változtatások vannak!",
+    "pages.show.changes.button": "Visszavonás",
     "pages.show.delete": "Oldal törlése",
     "pages.show.subpages.title": "Aloldalak",
-    "pages.show.subpages.edit": "Edit",
+    "pages.show.subpages.edit": "Aloldal szerkesztése",
     "pages.show.subpages.add": "Új aloldal",
     "pages.show.subpages.empty": "Az oldalhoz nem tartoznak aloldalak",
     "pages.show.files.title": "Fájlok",
-    "pages.show.files.edit": "Edit",
+    "pages.show.files.edit": "Fájl szerkesztése",
     "pages.show.files.add": "Új hozzáadása",
     "pages.show.files.empty": "Az oldalhoz nem tartoznak fájlok",
     "pages.show.error.permissions.title": "Az oldal nem írható",
     "pages.show.error.permissions.text": "Kérlek ellenőrizd a content mappa és a fájlok jogosultságát.",
     "pages.show.error.permissions.retry": "Újból",
-    "pages.show.error.notitle.title": "The blueprint does not have a title field",
-    "pages.show.error.notitle.text": "Please add a title field and try again",
+    "pages.show.error.notitle.title": "Ennek a blueprintnek nincs cím mezője",
+    "pages.show.error.notitle.text": "Töltsd ki a cím mezőt és próbálkozz újból",
     "pages.show.error.notitle.retry": "Újból",
     "pages.show.error.form": "Kérlek minden mezőt tölts ki",
     "pages.add.title.label": "Új aloldal hozzáadása",
@@ -91,22 +91,22 @@
     "pages.add.url.close": "Bezár",
     "pages.add.url.help": "Formátum: kisbetűs a-z, 0-9 és kötőjel",
     "pages.add.template.label": "Sablon",
-    "pages.add.error.create": "The page could not be created",
+    "pages.add.error.create": "Az oldal nem hozható létre",
     "pages.add.error.title": "Hiányzik a cím",
     "pages.add.error.template": "A sablon hiányzik",
     "pages.add.error.max.headline": "Új oldal látrehozása nem engedélyezett",
-    "pages.add.error.max.text": "A maximum létrehozható aloldalak számát elérted.",
+    "pages.add.error.max.text": "Elérted a maximálisan létrehozható aloldalak számát.",
     "pages.url.uid.label": "URL név",
-    "pages.url.uid.label.option": "Címből készítés",
+    "pages.url.uid.label.option": "Létrehozás címből",
     "pages.url.error.exists": "Van már egy másik oldal ezzel az URL-lel",
-    "pages.url.error.move": "Az URL nincs megváltoztatva",
-    "pages.url.error.rights": "You cannot change the URL of this page",
-    "pages.url.home.error.error": "The URL for the home and error pages cannot be changed",
-    "pages.toggle.position": "Position",
-    "pages.toggle.invisible": "invisible",
-    "pages.toggle.publish": "Do you really want to change the status of this page to **visible?**",
-    "pages.toggle.hide": "Do you really want to change the status of this page to **invisible?**",
-    "pages.toggle.error.error": "The status of the error page cannot be changed",
+    "pages.url.error.move": "Az URL-t nem sikerült megváltoztatni",
+    "pages.url.error.rights": "Ennek az oldalnak nem tudod megváltoztatni az URL-jét",
+    "pages.url.home.error.error": "A főoldal és a hibaoldal URL-je nem változtatható meg",
+    "pages.toggle.position": "Elhelyezkedés",
+    "pages.toggle.invisible": "rejtett",
+    "pages.toggle.publish": "Biztos megváltoztatod az oldal állapotát erre: **látható**?",
+    "pages.toggle.hide": "Biztos megváltoztatod az oldal állapotát erre: **rejtett**?",
+    "pages.toggle.error.error": "A hibaoldal állapota nem módosítható",
     "pages.delete.headline": "Biztos vagy benne, hogy törlöd az oldalt?",
     "pages.delete.error.home.headline": "A főoldal nem törölhető",
     "pages.delete.error.home.text": "Te a főoldalt próbálod törölni. Ez nem lehetséges és beláthatatlan következményei lennének.",
@@ -129,8 +129,8 @@
     "subpages.index.visible.help": "Fogd meg jobbról az oldalt és rendezd vagy tedd láthatóvá.",
     "subpages.index.invisible": "Láthatatlan aloldalak",
     "subpages.index.invisible.help": "Fogd meg balról az oldalt és rendezd vagy tedd láthatatlanná.",
-    "subpages.add.error": "This page is not allowed to have subpages",
-    "subpages.add.error.more": "This page cannot have any more subpages",
+    "subpages.add.error": "Ennek az oldalnak nem lehetnek aloldalai",
+    "subpages.add.error.more": "Ennek az oldalnak nem lehet több aloldala",
     "subpages.error.missing": "Az oldal nem található",
     "files": "Fájlok",
     "files.index.headline": "Fájlkezelés ennél:",
@@ -140,15 +140,15 @@
     "files.index.upload.first.button": "Töltsd fel az első fájlt",
     "files.index.edit": "Szerkeszt",
     "files.index.delete": "Töröl",
-    "files.index.error.disabled": "The page is not allowed to have any files",
-    "files.add.error.max": "The maximum number of files for the current page has been reached.",
-    "files.add.error.extension.missing": "You cannot upload files without extension",
-    "files.add.error.extension.forbidden": "Forbidden file extension",
-    "files.add.error.mime.forbidden": "Forbidden mime type",
-    "files.add.error.htaccess": "htaccess files cannot be uploaded",
-    "files.add.error.invisible": "Invisible files cannot be uploaded",
-    "files.add.blueprint.type.error": "Page only allows:",
-    "files.add.blueprint.size.error": "Page only allows file size of",
+    "files.index.error.disabled": "Ehhez az oldalhoz nem tartozhatnak fájlok",
+    "files.add.error.max": "Ehhez az oldalhoz nem tölthető fel a jelenleginél több fájl",
+    "files.add.error.extension.missing": "Kiterjesztés nélküli fájl nem tölthető fel",
+    "files.add.error.extension.forbidden": "Tiltott kiterjesztésű fájl",
+    "files.add.error.mime.forbidden": "Tiltott mime-típus",
+    "files.add.error.htaccess": "A htaccess fájlt nem lehet feltölteni",
+    "files.add.error.invisible": "Láthatatlan fájlok nem tölthetők fel",
+    "files.add.blueprint.type.error": "Az oldal az alábbiakat engedélyezi:",
+    "files.add.blueprint.size.error": "Az oldal által engedélyezett legnagyobb fájlméret",
     "files.show.name.label": "Fájlnév",
     "files.show.info.label": "Típus / fájlméret / méretek",
     "files.show.link.label": "Publikus link",
@@ -196,29 +196,29 @@
     "users.form.back": "Vissza a felhasználókhoz",
     "users.form.error.password.confirm": "Kérlek erősítsd meg a jelszót",
     "users.form.error.update": "A felhasználó nem frissíthető",
-    "users.form.error.update.rights": "You are not allowed to update this user",
+    "users.form.error.update.rights": "Nincs jogosultságod a felhasználó módosításához",
     "users.form.error.create": "A felhasználó nem hozható létre",
     "users.form.error.permissions.title": "A account mappa nem írható",
     "users.form.error.permissions.text": "Kérlek ellenőrizd, hogy a /site/accounts mappa létezik és írható.",
     "users.delete.headline": "Biztos törlöd ezt a felhasználót?",
     "users.delete.error": "A felhasználó nem törölhető",
-    "users.delete.error.permission": "You are not allowed to delete users",
-    "users.delete.error.permission.single": "You are not allowed to delete this user",
-    "users.delete.error.lastadmin": "You cannot delete the last admin",
+    "users.delete.error.permission": "Nincs jogosultságod felhasználók törléséhez",
+    "users.delete.error.permission.single": "Nincs jogosultságod törölni ezt a felhasználót",
+    "users.delete.error.lastadmin": "Nem törölheted az egyetlen adminisztrátort",
     "users.avatar.drop": "Dobd a profil képet ide…",
     "users.avatar.click": "…vagy kattints ide a feltöltéshez",
     "users.avatar.error.type": "Csak JPG, PNG és GIF fájl tölthető fel",
     "users.avatar.error.folder.headline": "Az avatar mappa nem írható",
     "users.avatar.error.folder.text": "Kérlek hozd létre a <strong>/assets/avatars</strong> mappát és tedd írhatóvá a profil képek feltöltéséhez.",
-    "users.avatar.error.permission": "You are not allowed to change the avatar",
+    "users.avatar.error.permission": "Nincs jogosultságod megváltoztatni a profilképet",
     "users.avatar.delete.error": "A profil kép nem törölhető",
-    "users.avatar.delete.error.permission": "You are not allowed to delete the avatar of this user",
+    "users.avatar.delete.error.permission": "Nincs jogosultságod megváloztatni ennek a felhasználónak a profilképét",
     "users.avatar.delete.success": "A profil kép törölve",
-    "users.avatar.missing": "This user has no avatar",
+    "users.avatar.missing": "Ennek a felhasználónak nincs profilképe",
     "users.error.missing": "A felhasználó nem található",
-    "user.error.lastadmin": "You are the only admin. This cannot be changed.",
-    "form.error.missing": "The form cannot be found",
-    "form.construct.error.invalid": "Invalid form construction method",
+    "user.error.lastadmin": "Te vagy az egyetlen adminisztrátor. Ez a beállítás nem módosítható.",
+    "form.error.missing": "Az űrlap nem található",
+    "form.construct.error.invalid": "Érvénytelen űrlapfelépítés",
     "fields.required": "Kötelező",
     "fields.date.label": "Dátum",
     "fields.date.months": [
@@ -263,12 +263,12 @@
     "fields.structure.add": "Új",
     "fields.structure.add.first": "Első bejegyzés hozzáadása",
     "fields.structure.empty": "Nincs még bejegyzés",
-    "fields.structure.entry.error": "The item could not be found",
+    "fields.structure.entry.error": "Az elem nem található",
     "fields.structure.cancel": "Mégse",
     "fields.structure.save": "Mentés",
     "fields.structure.edit": "Szerkeszt",
     "fields.structure.delete": "Törlés",
-    "fields.structure.delete.label": "Do you really want to delete this entry?",
+    "fields.structure.delete.label": "Biztos törölni szeretnéd ezt a bejegyzést?",
     "fields.tags.label": "Címkék",
     "fields.tel.label": "Telefon",
     "fields.textarea.buttons.bold.label": "Félkövér szöveg",
@@ -283,10 +283,10 @@
     "fields.toggle.no": "Nem",
     "fields.toggle.on": "Be",
     "fields.toggle.off": "Ki",
-    "fields.error.missing.controller": "The field controller file is missing",
-    "fields.error.missing.class": "The field controller class is missing",
-    "fields.error.route.invalid": "Invalid field route",
-    "fields.error.extended": "The field cannot be extended",
+    "fields.error.missing.controller": "A mezőszabályozó fájl nincs meg",
+    "fields.error.missing.class": "A mezőszabályozó osztály hiányzik",
+    "fields.error.route.invalid": "A mező elérési útvonala érvénytelen",
+    "fields.error.extended": "Ez a mező nem terjeszthető ki",
     "editor.link.url.label": "URL beillesztése",
     "editor.link.text.label": "Link szöveg",
     "editor.link.text.help": "A link szövege nem kötelező",
@@ -296,8 +296,8 @@
     "editor.email.text.help": "A link szövege nem kötelező",
     "editor.file.empty": "Az oldalnak nincsenek fájljai",
     "editor.image.empty": "Az oldalnak nincsenek képei",
-    "autocomplete.method.error": "Invalid autocomplete method",
-    "blueprints.error.default.missing": "Missing default blueprint",
+    "autocomplete.method.error": "Érvénytelen auto-kiegészítés metódus",
+    "blueprints.error.default.missing": "Hiányzó alapértelmezett blueprint",
     "error": "Hiba",
     "error.headline": "Hiba"
 }
